raffia/tests/error/at-rule/custom-selector/missing-colon.snap
---
source: raffia/tests/error.rs
---
error: expect token `:`, but found `<ident>`
  ┌─ missing-colon.css:1:18
  │
1 │ @custom-selector --foo .foo;
  │                  ^^^^^


